XML Changes 1.0.1